feat and fix: all payments and records